# zcopy

./: Cargo.toml  README.md
src/: check_if_file_is_dir.rs  current_directory_cmd.rs  file_checker.rs  main.rs  relative_directory_cmd.rs
